# CoMPNetX

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  FindOpenRAVE.cmake  LICENSE  Makefile  README.md  note.md  testplugin.py
.devcontainer/: devcontainer.json
docker/: Dockerfile
docker/.devcontainer/: devcontainer.json
docker/catkin_ws/src/baxter_common/baxter_description/meshes/base/: pedestal_link_collision.DAE
docker/catkin_ws/src/baxter_common/baxter_description/meshes/head/: H0.DAE  H1.DAE
docker/catkin_ws/src/baxter_common/baxter_description/meshes/lower_elbow/: E1.DAE
docker/catkin_ws/src/baxter_common/baxter_description/meshes/lower_forearm/: W1.DAE
docker/catkin_ws/src/baxter_common/baxter_description/urdf/: baxter.srdf  baxter_new.srdf  baxter_sym.urdf  baxter_xacro.urdf  left_end_effector.urdf.xacro
include/: Constraint.h  Parameters.h  Problem.h  SemiToroidalStateSpace.h  StateValidityChecker.h  TSR.h  TSRChainConstraint.h  TSRRobot.h  or_conversions.h
models/kinbodys/: liftingbox.kinbody.xml
models/robots/: herb2_padded.robot.xml  herb_base.kinbody.xml  herb_base_collision.iv  side_by_side_wams_padded.kinbody.xml
models/robots/barrett/: barrett_wristapprox.kinbody.xml  barrettmount_convex.iv  bh_link1.stl  bh_link2.stl  bh_link3.stl  hand_w_mug_convex.iv  link1.iv  link1_convex.iv  link1old_convex.iv  link2.iv  link2_convex.iv  link2old_convex.iv  link3.iv  link3_convex.iv  link3old_convex.iv  palmold_convex.iv  wam0.iv  wam0.stl  wam0_convex.iv  wam1.iv  wam1.stl  wam1_convex.iv  wam2.iv  wam2.stl  wam2_convex.iv  wam3.iv  wam3_convex.iv  wam3_joint_encoder.iv  wam3_joint_encoder.stl  wam4.iv  wam4.stl  wam4_convex.iv  wam4_nowrist_convex.iv  wam5.iv  wam5.stl  wam5_convex.iv  wam6.iv  wam6.stl  wam6_convex.iv  wam7.iv  (+7 more)
models/robots/barrett/odeWAMmodels/WAM/: all.iv  wam0.iv  wam1.iv  wam2.iv  wam3.iv  wam4.iv  wam4_nowrist.iv  wam5.iv  wam6.iv  wam7.iv  wam7_nohand.iv  wam8.iv  wam_stand.iv
models/robots/barrett/odeWAMmodels/odeWAM/: barrettwam_ode.robot.xml  wam0iv.kinbody.xml  wam0ode.kinbody.xml  wam1iv.kinbody.xml  wam1ode.kinbody.xml  wam2iv.kinbody.xml  wam2ode.kinbody.xml  wam3iv.kinbody.xml  wam3ode.kinbody.xml  wam4iv.kinbody.xml  wam4ode.kinbody.xml  wam5iv.kinbody.xml  wam5ode.kinbody.xml  wam6iv.kinbody.xml  wam6ode.kinbody.xml  wam7_nohandiv.kinbody.xml  wam7dofode.kinbody.xml  wam7iv.kinbody.xml  wam7ode.kinbody.xml
models/scenes/: herb2_liftingbox.env.xml
python/: OMPLInterface.py  data.py  model_test.py  models.py  setup.cfg  test.py  train.py
robots/: myrobot.robot.xml
scenes/: myscene.env.xml
scripts/: .pep8  BaxterDoorOpening.py  DoorOpening.py  LiftBox.py  OMPLInterface.py  TransformMatrix.py  calculate_distance.py  model_test.py  model_test_cpp2_modified.py  model_test_cpp2_mpnet.py  model_test_cpp3.py  model_test_cpp3_modified.py  model_test_cpp3_mpnet.py  model_test_kitchen.py  plannerParameters.py  statistic.py  statistic_temp.py  test.py  utils.py
src/: .clang-format  AtlasChart.cpp  AtlasStateSpace.cpp  CMakeLists.txt  Constraint.cpp  MPNetPlanner.cpp  MPNetSampler.cpp  MPNetSamplerX.cpp  Parameters.cpp  Problem.cpp  RRTConnect.cpp  RobotHelper.cpp  SemiToroidalStateSpace.cpp  StateValidityChecker.cpp  TSR.cpp  TSRChain.cpp  TSRChainConstraint.cpp  TSRRobot.cpp  TangentBundleStateSpace.cpp  TaskSpaceRegion.cpp  TaskSpaceRegionChain.cpp  main.cpp  or_conversions.cpp
src/compnetx/: Constraint.h  Parameters.h  Problem.h  StateValidityChecker.h  TaskSpaceRegionChain.h
src/compnetx/planner/: MPNetPlanner.h  MPNetSampler.h  MPNetWithTSRSampler.h  MPNetWithoutTSRSampler.h  MPNetXPlanner.h  MPNetXSampler.h  RobotHelper.h
src/compnetx/planner/src/: MPNetPlanner.cpp  MPNetSampler.cpp  MPNetWithTSRSampler.cpp  MPNetWithoutTSRSampler.cpp  MPNetXPlanner.cpp  MPNetXSampler.cpp  RRTConnect.cpp  RobotHelper.cpp
src/compnetx/src/: Constraint.cpp  Parameters.cpp  Problem.cpp  StateValidityChecker.cpp  TaskSpaceRegionChain.cpp  lib.cpp
src/include/: AtlasChart.h  AtlasStateSpace.h  Constraint.h  MPNetPlanner.h  MPNetSampler.h  Parameters.h  Problem.h  ProjectedStateSpace.h  RRT.h  RobotHelper.h  SemiToroidalStateSpace.h  StateValidityChecker.h  TSR.h  TSRChain.h  TSRRobot.h  TangentBundleStateSpace.h  TaskSpaceRegion.h  TaskSpaceRegionChain.h  cmake_config.h  or_conversions.h
src/planner/: MPNetPlanner.cpp  MPNetSamplerX.cpp  MPNetXPlanner.cpp  MPNetXSampler.cpp  PRM.cpp  PRMMPNet.cpp  RRT.cpp  RRTConnect.cpp  RobotHelper.cpp
src/planner/include/: GoalVisitor.hpp  MPNetXPlanner.h  MPNetXSampler.h  PRMMPNet.h  RobotHelper.h
src/spaces/: AtlasChart.cpp
src/statespace/: AtlasChart.cpp  AtlasStateSpace.cpp  ConstrainedStateSpace.cpp  ProjectedStateSpace.cpp
(+16 files in other folders)
